ページの基盤作成

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "hooper": "^0.3.4"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
@@ -29,9 +30,11 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
-    "require-extension-hooks-vue": "^3.0.0"
+    "require-extension-hooks-vue": "^3.0.0",
+    "sass-loader": "^10.1.0"
   }
 }
