お問い合せバリデーション

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
+    "hooper": "^0.3.4",
     "nuxt": "^2.14.6",
-    "hooper": "^0.3.4"
+    "vee-validate": "^3.4.5"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
